refactor(pipe): improve readability and structure in PipeNodeBlock by adding braces and simplifying conditions